Refactoring
Refactoring the packages that we decided to work on by using one of eclipse plugin