@@ -43,12 +43,8 @@ import net.sf.freecol.common.io.FreeColXMLWriter;
 
 import org.w3c.dom.Element;
 
-
-/**
- * A FreeCol high score record.
- */
+/** A FreeCol high score record. */
 public class HighScore extends FreeColObject {
-
     private static final Logger logger = Logger.getLogger(HighScore.class.getName());
 
     /** The number of high scores to allow in the high scores list. */
@@ -58,7 +54,7 @@ public class HighScore extends FreeColObject {
      * On retirement, an object will be named in honour of the
      * player.  The nature of the object depends on the player's score.
      */
-    public static enum ScoreLevel {
+    public enum ScoreLevel {
         CONTINENT(40000),
         COUNTRY(35000),
         STATE(30000),
@@ -82,7 +78,6 @@ public class HighScore extends FreeColObject {
 
         private final int minimumScore;
 
-
         ScoreLevel(int minimumScore) {
             this.minimumScore = minimumScore;
         }
@@ -92,7 +87,7 @@ public class HighScore extends FreeColObject {
         }
     }
 
-    /** The format to use for dates.  Almost ISO8601. */
+    /** The format to use for dates. Almost ISO8601. */
     private static final SimpleDateFormat dateFormat
         = new SimpleDateFormat("yyyy-MM-dd HH:mm:ssZ");
 
@@ -134,7 +129,6 @@ public class HighScore extends FreeColObject {
     
     /** The turn when the player retired. */
     private int retirementTurn;
-
 
     /**
      * Create a new high score record.
@@ -186,7 +180,6 @@ public class HighScore extends FreeColObject {
     public HighScore(Element element) {
         readFromXMLElement(element);
     }
-
 
     /**
      * Get the turn independence occurs.
@@ -314,9 +307,10 @@ public class HighScore extends FreeColObject {
         return date;
     }
 
-
-    // Utilities for manipulating lists of high scores, and serialization
-    // with the high scores file.
+    /**
+     * Utilities for manipulating lists of high scores, and serialization
+     * with the high scores file.
+     */
 
     private static final String HIGH_SCORES_TAG = "highScores";
 
@@ -341,8 +335,7 @@ public class HighScore extends FreeColObject {
      * @return True if the given score can be added to the list.
      */
     public static boolean checkHighScore(int score, List<HighScore> scores) {
-        return /*!FreeColDebugger.isInDebugMode()
-                 && */score >= 0
+        return /* !FreeColDebugger.isInDebugMode() && */score >= 0
             && (scores.size() < NUMBER_OF_HIGH_SCORES
                 || score > scores.get(scores.size()-1).getScore());
     }
@@ -356,7 +349,9 @@ public class HighScore extends FreeColObject {
      */
     public static boolean newHighScore(Player player) {
         List<HighScore> scores = loadHighScores();
-        if (!checkHighScore(player.getScore(), scores)) return false;
+        if (!checkHighScore(player.getScore(), scores)) {
+			return false;
+		}
         HighScore hs = new HighScore(player, new Date());
         scores.add(hs);
         tidyScores(scores);
@@ -386,13 +381,13 @@ public class HighScore extends FreeColObject {
 
         try (
             FileInputStream fis = new FileInputStream(hsf);
-            FreeColXMLReader xr = new FreeColXMLReader(fis);
+            FreeColXMLReader xr = new FreeColXMLReader(fis)
         ) {
             xr.nextTag();
 
             while (xr.nextTag() != XMLStreamConstants.END_ELEMENT) {
                 final String tag = xr.getLocalName();
-                if (HighScore.getXMLElementTagName().equals(tag)) {
+                if (getXMLElementTagName().equals(tag)) {
                     scores.add(new HighScore(xr));
                 }
             }
@@ -411,14 +406,16 @@ public class HighScore extends FreeColObject {
      */
     public static boolean saveHighScores(List<HighScore> scores) {
         boolean ret = false;
-        if (scores == null) return false;
+        if (scores == null) {
+			return false;
+		}
         tidyScores(scores);
 
         File hsf = FreeColDirectories.getHighScoreFile();
         try (
             FileOutputStream fos = new FileOutputStream(hsf);
             FreeColXMLWriter xw = new FreeColXMLWriter(fos,
-                FreeColXMLWriter.WriteScope.toSave(), true);
+                FreeColXMLWriter.WriteScope.toSave(), true)
         ) {
             ret = true;
             xw.writeStartDocument("UTF-8", "1.0");
@@ -444,12 +441,8 @@ public class HighScore extends FreeColObject {
         return ret;
     }
 
+    /** Override FreeColObject. */
 
-    // Override FreeColObject
-
-    /**
-     * {@inheritDoc}
-     */
     @Override
     public int compareTo(FreeColObject other) {
         int cmp = 0;
@@ -457,15 +450,17 @@ public class HighScore extends FreeColObject {
             HighScore hs = (HighScore)other;
             cmp = hs.getScore() - getScore();
         }
-        if (cmp == 0) cmp = super.compareTo(other);
+        if (cmp == 0) {
+			cmp = super.compareTo(other);
+		}
         return cmp;
     }
 
-
-    // Serialization.
-    // High scores are only FreeColObjects so that they can be c-s serialized,
-    // they do not have ids.
-
+    /**
+     * Serialization.
+     * High scores are only FreeColObjects so that they can be c-s serialized,
+     * they do not have ids.
+     */
 
     private static final String COLONIES_TAG = "colonies";
     private static final String DATE_TAG = "date";
@@ -480,15 +475,11 @@ public class HighScore extends FreeColObject {
     private static final String RETIREMENT_TURN_TAG = "retirementTurn";
     private static final String SCORE_TAG = "score";
     private static final String UNITS_TAG = "units";
-    // @compat 0.10.7
+    /** @compat 0.10.7 */
     private static final String OLD_NATION_ID_TAG = "nationID";
     private static final String OLD_NATION_TYPE_ID_TAG = "nationTypeID";
-    // end @compat
+    /** End @compat. */
 
-
-    /**
-     * {@inheritDoc}
-     */
     @Override
     protected void writeAttributes(FreeColXMLWriter xw) throws XMLStreamException {
         // HighScores do not have ids, no super.writeAttributes().
@@ -525,9 +516,6 @@ public class HighScore extends FreeColObject {
         xw.writeAttribute(COLONIES_TAG, colonies);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
     public void readAttributes(FreeColXMLReader xr) throws XMLStreamException {
         // HighScores do not have ids, no super.readAttributes().
@@ -535,7 +523,9 @@ public class HighScore extends FreeColObject {
         date = null;
         try {
             long l = xr.getAttribute(DATE_TAG, -1L);
-            if (l >= 0) date = new Date(l);
+            if (l >= 0) {
+				date = new Date(l);
+			}
         } catch (Exception e) {
             logger.log(Level.WARNING, "Bad long date", e);
         }
@@ -544,7 +534,7 @@ public class HighScore extends FreeColObject {
             try {
                 float f = xr.getAttribute(DATE_TAG, -1.0f);
                 if (f >= 0.0 && f < Long.MAX_VALUE) {
-                    date = new Date(new Float(f).longValue());
+                    date = new Date(Float.valueOf(f).longValue());
                 }
             } catch (Exception e) {
                 logger.log(Level.WARNING, "Bad float date", e);
@@ -561,7 +551,9 @@ public class HighScore extends FreeColObject {
             }
         }
         // end @compat
-        if (date == null) date = new Date(); // Give up
+        if (date == null) {
+			date = new Date();
+		} // Give up
         
         retirementTurn = xr.getAttribute(RETIREMENT_TURN_TAG, 0);
 
@@ -598,9 +590,6 @@ public class HighScore extends FreeColObject {
         colonies = xr.getAttribute(COLONIES_TAG, 0);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
     public String getXMLTagName() { return getXMLElementTagName(); }
 
